# agentic-researcher-team-aixplain

./: .env.example  .gitignore  BUGFIX_NONETYPE_SUBSCRIPTABLE.md  CHANGELOG_MODEL_AND_METADATA.md  DEBUGGING_IMPROVEMENTS.md  DIAGNOSIS_TEAM_FAILURE.md  FAILURE_ANALYSIS_KINDERGARTEN.md  FIX_SUMMARY.md  INSPECTOR_REINTEGRATION_SUMMARY.md  INSPECTOR_REMOVAL_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  KNOWN_ISSUES.md  ONGOING_INVESTIGATION_KINDERGARTEN.md  QUICKSTART.md  README.md  RESPONSE_GENERATOR_FORMAT_FIX.md  SERVER_LOGS_FEATURE.md  SIMPLIFIED_INSTRUCTIONS.md  TASK_1_VALIDATION_TOOLS_SUMMARY.md  TASK_2_VALIDATION_AGENT_SUMMARY.md  TASK_3.2_IMPLEMENTATION_SUMMARY.md  TASK_3_IMPLEMENTATION_SUMMARY.md  TASK_4_ONTOLOGY_AGENT_SUMMARY.md  TASK_5_WIKIPEDIA_AGENT_VALIDATION_SUMMARY.md  TESTING_AGENTS.md  TEST_SUITE_UPDATE.md  agent_config_output.json  pyproject.toml  pytest.ini  run_tests.sh  start-backend-dev.sh  start-backend.sh  start-frontend.sh  test_agent_config.py  test_agent_output_Angela_Merkel.json  test_agent_standalone.py  test_changes.py  test_kindergarten_query.py  test_list_endpoint_enhancement.py
.kiro/specs/: test-suite-refactoring.md
api/: README.md  VALIDATION_TOOLS_README.md  __init__.py  aixplain_client.py  config.py  debug_trace.py  entity_processor.py  entity_validator.py  find_google_search_tool.py  find_wikipedia_tool.py  list_all_tools.py  main.py  models.py  persistent_storage.py  register_validation_tools.py  schema_org_validator_tool.py  search_strategy.py  storage.py  team_config.py  team_log_handler.py  url_verifier_tool.py
api/instructions/: mentalist.py  ontology_agent.py  search_agent.py  validation_agent.py  wikipedia_agent.py
archive/test_scripts/: test_changes_simple.py  test_inspector_config.py  test_tavily_tool.py  verify_fix.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GOOGLE_SEARCH_INTEGRATION.md  LIST_ENDPOINT_FILTERING.md  README.md  TEXT_FORMAT_UPDATE.md  TROUBLESHOOTING.md  regulatory_foresight_6_pager_ministry_demo.md
docs/archive/: AGENT_CONFIGURATION_UI_UPDATE.md  DYNAMIC_AGENT_CONFIGURATION.md  ENTITY_EXTRACTION_ANALYSIS.md  README.md  (+12 more)
mcp_server/: .env.example  ARCHITECTURE.md  LIBRECHAT_INTEGRATION.md  LOGGING_IMPLEMENTATION.md  README.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  __init__.py  config.py  errors.py  fastapi_client.py  formatters.py  main.py  pyproject.toml  run_e2e_tests.sh  server.py  test_logging_demo.py
mcp_server/examples/: 00_full_workflow.py  01_spawn_agent_team.py  02_check_status.py  03_get_results.py  04_list_executions.py  README.md  mcp.json.example
mcp_server/tests/: README_E2E.md  TEST_SUMMARY.md  test_config.py  test_e2e_integration.py  test_fastapi_client.py  test_formatters.py  test_librechat_simulation.py  test_main.py  test_server_integration.py
scripts/: add_test_markers.py  register_validation_tools.py  run_e2e_tests.sh  view_database.py
tests/: DOCUMENTATION_INDEX.md  E2E_TEST_NAMING_UPDATE.md  ENHANCED_EXTRACTION_TESTING.md  FINAL_FIXES_SUMMARY.md  FIXES_APPLIED.md  INTEGRATION_TESTS_QUICK_START.md  INTEGRATION_TESTS_README.md  MARKER_IMPLEMENTATION_REPORT.md  README.md  README_E2E_TEST.md  README_ENTITY_PROCESSING_TEST.md  README_REGRESSION_TESTS.md  REGRESSION_TEST_SUMMARY.md  RUN_INTEGRATION_TESTS.sh  TASK5_VERIFICATION.md  TEST_FAILURES_ANALYSIS.md  TEST_MARKERS_SUMMARY.md  TEST_PHASE1_SUMMARY.md  __init__.py  config.py  conftest.py  demo_ontology_agent.py  demo_validation_agent.py  demo_validation_tools.py  demo_wikipedia_agent_validation.py  demo_wikipedia_integration.py  e2e_test_kinderarmut.py  expected_honeycomb_kinderarmut.json  manual_climate_policy_test.py  manual_jugendarmut_test.py  manual_wikipedia_test.py  test_agent_integration.py  test_agent_workflow_integration.py  test_api.py  test_api_integration.py  test_climate_policy.py  test_direct_entity_processing.py  test_e2e_einbuergerung.py  test_e2e_integration.py  test_enhanced_extraction.py  (+27 more)
ui/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.js
(+33 files in other folders)
