[tool.poetry]
name = "librechat-osint-mcp-server"
version = "0.1.0"
description = "MCP server for LibreChat integration with OSINT agent teams"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mcp_server"}]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^0.9.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
ruff = "^0.3.0"

[tool.poetry.scripts]
librechat-mcp = "mcp_server.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
